CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT (gtorrent-qt)

SET (GTORRENT_VERSION_MAJOR 0)
SET (GTORRENT_VERSION_MINOR 0)
SET (GTORRENT_VERSION_PATCH 2)
SET (GTORRENT_VERSION ${GTORRENT_VERSION_MAJOR}.${GTORRENT_VERSION_MINOR}.${GTORRENT_VERSION_PATCH})

INCLUDE (FindPkgConfig)

PKG_SEARCH_MODULE (LIBTORRENT REQUIRED libtorrent-rasterbar)
PKG_SEARCH_MODULE (QTCORE REQUIRED QtCore)
PKG_SEARCH_MODULE (QTAPPLICATION REQUIRED QtGui)

LINK_DIRECTORIES (
        ${QTCORE_LIBRARY_DIRS}
	${QTAPPLICATION_LIBRARY_DIRS}
	)

INCLUDE_DIRECTORIES (
	${QTAPPLICATION_INCLUDE_DIRS}
        ${QTCORE_INCLUDE_DIRS}
	)

ADD_EXECUTABLE (gtorrent-qt
        lel.cpp)

TARGET_LINK_LIBRARIES (gtorrent-qt
        ${QTCORE_LIBRARIES}
        ${QTAPPLICATION_LIBRARIES}
        )
